--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
         <% if (locals.userLogged) { %>
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-end justify-content-lg-end">
-                    <p class="mx-3 my-auto">Bienvenid@ <%= user.name %> <p>
+                    <p class="mx-3 my-auto">Bienvenid@ <%= user.name %> <%= user.lastName %> <p>
                     <div class="dropdown text-end">
                         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="/img/users/<%= user.avatar %> " alt="mdo" width="40" height="40" class="rounded-circle">
