--- a/src/views/pages/user/createUser.ejs
+++ b/src/views/pages/user/createUser.ejs
@@ -31,7 +31,7 @@
                 </div>                        
             <% } %>
         </div>
-        <div class="col-12">
+        <div class="col-md-6">
             <label for="email" class="form-label">Email</label>
             <input
                 type="email"
@@ -46,7 +46,7 @@
                 </div>                        
             <% } %>
         </div>
-        <div class="col-12">
+        <div class="col-md-6">
             <label for="password" class="form-label">Password</label>
             <input
             type="password"
@@ -59,8 +59,8 @@
             </div>                        
         <% } %>
         </div>
-        <div class="col-12">
-            <labelfor="city" class="form-label">Ciudad</labelfor=>
+        <div class="col-md-5">
+            <label for="city" class="form-label">Ciudad</label>
             <input
             type="text"
             name="city"
@@ -70,11 +70,11 @@
         >
         <% if (locals.errors && errors.city) { %>
             <div class="text-danger">
-                <%= errors.password.msg %> 
+                <%= errors.city.msg %> 
             </div>                        
         <% } %>
         </div>
-        <div class=" col-md-8">
+        <div class=" col-md-3">
             <label for="address" class="form-label">Dirección</label>
             <input
                 type="text"
@@ -85,7 +85,7 @@
             >
             <% if (locals.errors && errors.address) { %>
                 <div class="text-danger">
-                    <%= errors.password.msg %> 
+                    <%= errors.address.msg %> 
                 </div>                        
             <% } %>
         </div>
@@ -112,14 +112,14 @@
                 id="postalCode"
                 class="form-control <%= locals.errors && errors.postalCode ? 'is-invalid' : null %>"
                 value="<%= locals.oldData ? oldData.postalCode : null %>"
-                <% if (locals.errors && errors.postalCode) { %>
+                >
+            <% if (locals.errors && errors.postalCode) { %>
                 <div class="text-danger">
                     <%= errors.postalCode.msg %> 
                 </div>                        
             <% } %>
-                >
         </div>
-        <div class="col-12">
+        <div class="col-md-6">
             <label for="avatar">Elija una imagen</label>
             <input
                 type="file"
