--- a/src/views/pages/products/productDetail.ejs
+++ b/src/views/pages/products/productDetail.ejs
@@ -1,4 +1,5 @@
 <%- include('../../partials/head')  %>
+<%- include('../../partials/header') %>
 
     <div class="container bg-gradient text-bg-dark">
         <h3><%= detailProduct.name %></h3>
