--- a/src/views/pages/user/createUser.ejs
+++ b/src/views/pages/user/createUser.ejs
@@ -1,4 +1,6 @@
 <%- include('../../partials/head')  %>
+<%- include('../../partials/header') %>
+
 <section class="container-fluid">
     <form action="/user/register" method="POST" enctype="multipart/form-data"  class="row g-2 d-flex justify-content-center">
         <div class=" col-md-6">
@@ -143,3 +145,5 @@
 
 
 </section>
+
+<%- include('../../partials/footer') %>
