--- a/src/views/pages/products/productDetail.ejs
+++ b/src/views/pages/products/productDetail.ejs
@@ -24,9 +24,13 @@
         <div class="product-details">
             <p>$<%= detailProduct.price %></p>
             <p><%= detailProduct.brand.name %></p>
-            <img src="/img/logos/brand/<%= detailProduct.brand.image %>" alt="" width="120">
+            <a href="/products/brand/<%= detailProduct.brand.name %>" >
+                <img src="/img/logos/brand/<%= detailProduct.brand.image %>" alt="" width="120">
+            </a>
             <p><%= detailProduct.manufactorer.name %></p>
-            <p>#<%= detailProduct.tag.name %></p>
+            <a href="/products/tag/<%= detailProduct.tag.name %>" >
+                <p>#<%= detailProduct.tag.name %></p>
+            </a>
             <% detailProduct.description.forEach(element => { %>
                 <p><%= element.description %></p>  
             <% }) %>
