--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -28,8 +28,8 @@
                                     <li><a href="/admin/admin-panel" class="dropdown-item">Admin Panel</a></li>
                                 <% } %>
                                 <!-- ! amdmin link -->
-                                <li><a class="dropdown-item" href="/user/board">Tablero</a></li>
-                                <li><a class="dropdown-item" href="#">Cambiar fondo</a></li>
+                                <!-- <li><a class="dropdown-item" href="/user/board">Tablero</a></li> -->
+                                <!-- <li><a class="dropdown-item" href="#">Cambiar fondo</a></li> -->
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="/user/logout">Sign out</a></li>
                             </ul>
