--- a/src/views/pages/products/productDetail.ejs
+++ b/src/views/pages/products/productDetail.ejs
@@ -27,7 +27,9 @@
             <a href="/products/brand/<%= detailProduct.brand.name %>" >
                 <img src="/img/logos/brand/<%= detailProduct.brand.image %>" alt="" width="120">
             </a>
-            <p><%= detailProduct.manufactorer.name %></p>
+            <a href="/products/manufactorer/<%= detailProduct.manufactorer.name %>" >
+                <p><%= detailProduct.manufactorer.name %></p>
+            </a>
             <a href="/products/tag/<%= detailProduct.tag.name %>" >
                 <p>#<%= detailProduct.tag.name %></p>
             </a>
