agragada galeria de imageges al detalle del producto.

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,9 +1,10 @@
-<header class="p-3 mb-3 row g-2 sticky-top header">
+<header class="p-3 mb-3 row g-2  header">
     <nav class="navbar navbar-expand-lg d-flex justify-content-center px-4">
         <div class="col-lg-9 d-flex justify-content-around row mb-3">
             <a href="/" class="col-lg-3 px-2 d-flex justify-content-center"><img src="/img/site-img/ELZOTANO.png" alt="logo"></a>
             <form class="d-flex col-lg-8" role="search">
                 <div class="input-group ">
+                    <form action="#" method="get"></form>
                     <input type="search" class="form-control rounded-start" />
                     <label for="search" id="search" class="form-label"></label>
                     <button type="submit" id="search-btn" class="btn btn-dark rounded-end"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
