--- a/src/views/pages/products/productDetail.ejs
+++ b/src/views/pages/products/productDetail.ejs
@@ -2,23 +2,53 @@
 <%- include('../../partials/header') %>
 
     <div class="container bg-gradient text-bg-dark">
+        <h2>testing modal</h2>
         <h3><%= detailProduct.name %></h3>
         <div class="img-container text-center">
             <div>
                 <% if (detailProduct.image.length > 0) { %>
-                    <img src="/img/products/<%= detailProduct.image[0].name%> " alt="" width="90%">
+                    <img src="/img/products/<%= detailProduct.image[0].name%>" alt="" width="90%" class="gallery-image" data-bs-toggle="modal" data-bs-target="#galleryModal">
                 <% } else { %>
                     <img src="/img/nami.jpg" alt="" height="300px">
                 <% } %>
             </div>
             <div class="d-flex flex-wrap justify-content-between mt-4 row g-2 thumbnail-container">
                 <% if (detailProduct.image.length > 0) { %>
-                    <% for( let i = 0; i < 4; i++ ) { %>
-                    <div class="img-small col-3 align-self-center align-content-center">
-                        <img src="/img/products/<%= detailProduct.image[i].name %>" class="col-12 align-content-center my-auto"  alt="">
+                    <% for (let i = 0; i < detailProduct.image.length; i++) { %>
+                        <div class="img-small col-3 align-self-center align-content-center">
+                            <img src="/img/products/<%= detailProduct.image[i].name %>" class="col-12 align-content-center my-auto gallery-thumbnail gallery-image" alt="" data-bs-toggle="modal" data-bs-target="#galleryModal">
+                        </div>
+                    <% } %>
+                <% } %>
+            </div>
+        </div>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="galleryModal" tabindex="-1" aria-labelledby="galleryModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered h-100">
+                <div class="modal-content">
+                    <div class="modal-body text-center">
+                        <div id="myCarousel" class="carousel slide carousel-md" data-bs-interval="false">
+                            <div id="myCarousel" class="carousel slide"  >
+                                <div class="carousel-inner">
+                                    <% for (let i = 0; i < detailProduct.image.length; i++) { %>
+                                        <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+                                            <img src="/img/products/<%= detailProduct.image[i].name %>" class="d-block w-100" alt="Image <%= i %>">
+                                        </div>
+                                    <% } %>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
                     </div>
-                    <% } %>
-                    <% } %>
+                </div>
             </div>
         </div>
         <div class="product-details">
@@ -44,6 +74,12 @@
             </ul>
         </div>
     </div>
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+
 
 
 
