--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -34,6 +34,21 @@
           </div>
     </section>
 
+    <section class="container">
+      <h2 class="text-center">Destacados</h2>
+      <div class="product-container row g-2">
+          <% for( let i = 0; i < featured.length; i++ ) { %>
+              <div class="product-container col-md-6 col-lg-3">
+                  <a href="products/product-detail/<%= featured[i].id %> " class="text-decoration-none">
+                      <img src="img/products/<%= featured[i].image[0].name %>" alt="" width="80%">
+                      <p><%= featured[i].name %> </p>
+                      <p>$: <%= featured[i].price %> </p>
+                  </a>
+              </div>
+          <% } %>
+      </div>
+    </section>
+
 
 
 
